<resources>
    <string name="app_name">Project Group 7</string>
    <string name="rtd">Roll the dice</string>
    <string name="error_while_sending_move">Unknown error occurred while sending move</string>
    <string name="error_while_getting_move">Unknown error occurred while obtaining opponent move</string>
    <string name="draw">Draw</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="open_rps">Rock Paper Scissors</string>
    <string name="open_dices">Dice</string>
    <string name="open_tic_tac_toe">Tic Tac Toe</string>
    <string name="open_blow">Blow the Ball</string>
    <string name="waiting_room">Please wait here, we are searching a game room for: %1$s</string>
    <string name="waiting_room_game_error">Unknown Error while opening the game</string>
    <string name="opponent_left">Opponent left the game, you win</string>
    <string name="leave_queue">Leave the Waiting Queue</string>
    <string name="start_game">Start Game</string>
    <string name="back">Go Back</string>
    <string name="random">Random Game</string>
    <string name="open_fac">Flip a Coin</string>
    <string name="random_game">Or play a random game</string>
    <string name="button_replay">Replay</string>
    <string name="button_back_to_main">Home</string>
    <string name="blowing_game_name">BLOW GAME</string>
    <string name="blowing_game_desc">Blow into your microphone and push the ball the furthest!</string>
    <string name="dices_name">DICE GAME</string>
    <string name="dices_desc">Roll custom number of dice and let the fate decide!</string>
    <string name="tic_tac_toe_name">TIC TAC TOE</string>
    <string name="tic_tac_toe_desc">Check your cognitive skills by playing tic-tac-toe!</string>
    <string name="rock_pape_scissors_name">Rock Paper Scissors</string>
    <string name="rock_paper_scissors_desc">Play Rock Paper Scissors and test yourself!</string>
    <string name="flip_a_coin_name">Flip a Coin</string>
    <string name="flip_a_coin_desc">Simply flip a coin. Maybe you win, maybe you lose - who knows?</string>
    <string name="unknown_game_error_name">Something went wrong</string>
    <string name="unknown_game_error_desc">You should not be seeing this</string>
    <string name="result_pending">Result pending</string>
    <string name="warning_not_your_turn">It is not your turn.</string>
    <string name="feedback">Give us feedback:</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="message">Write a message...</string>
    <string name="sent_feedback">Feedback sent</string>

</resources>