<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="24dp"
                android:text="@string/random_game"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/open_blow"
                app:layout_constraintVertical_bias="0.031"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/open_flip_a_coin"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_marginTop="16dp"
                android:elevation="2dp"

                android:text="FLIP A COIN"
                android:textColor="@color/text_gray"
                android:textSize="18sp"
                app:backgroundTint="@color/light_gray"
                app:layout_constraintEnd_toStartOf="@+id/open_tic_tac_toe"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/open_tic_tac_toe"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:text="@string/open_tic_tac_toe"
                android:textColor="@color/text_gray"
                android:textSize="18sp"
                app:backgroundTint="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/open_blow"
                android:layout_width="364dp"
                android:layout_height="140dp"
                android:layout_marginTop="28dp"
                android:text="@string/open_blow"
                android:textColor="@color/text_gray"
                android:textSize="18sp"
                app:backgroundTint="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/open_RPS" />

            <Button
                android:id="@+id/open_Dices"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_marginTop="24dp"
                android:text="@string/open_dices"
                android:textColor="@color/text_gray"
                android:textSize="18sp"
                app:backgroundTint="@color/light_gray"
                app:layout_constraintEnd_toEndOf="@+id/open_tic_tac_toe"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/open_RPS"
                app:layout_constraintTop_toBottomOf="@+id/open_tic_tac_toe" />
    <Button
        android:id="@+id/open_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="168dp"
        android:text="@string/random"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/open_RPS"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_marginTop="24dp"
                android:text="@string/open_rps"
                android:textColor="@color/text_gray"
                android:textSize="18sp"
                app:backgroundTint="@color/light_gray"
                app:layout_constraintStart_toStartOf="@+id/open_flip_a_coin"
                app:layout_constraintTop_toBottomOf="@+id/open_flip_a_coin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/background_tint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:background="@color/black"
            android:visibility="invisible"
            app:srcCompat="@android:drawable/divider_horizontal_dark" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
